--- a/CustomerService/pom.xml
+++ b/CustomerService/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>CustomerService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>CustomerService</name>
 	<description>Customer Service project for Spring Boot</description>
 
